Refactor .env.example file by removing unnecessary whitespaces and adding missing ones.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 OPENAI_API_KEY=
 OPENAI_MODEL=text-davinci-003
-API_ENDPOINT = 'https://api.openai.com/v1/completions'.freeze
-MAX_TOKENS = 2048
+API_ENDPOINT='https://api.openai.com/v1/completions'
+MAX_TOKENS=2048
